# Loop-Trip--Count-Estimator-and-Unroll-Advisor

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  PROJECT_REPORT.md  README.md  app.py  loop_unroll_advisor_spec.md
scripts/: build.sh  run.sh  run_tests.sh
src/: LoopUnrollAdvisor.cpp
static/: app.js  styles.css
templates/: index.html
tests/c/: dead.c  dynamic.c  fixed.c  float_iv.c  large.c  large_trip.c  mixed.c  nested.c  nested_loop.c  simple_for.c  symbolic.c  unknown_bound.c  while_loop.c
